[package]
name = "gossip-glomers"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
xtra = { version = "0.5", features = ["with-tokio-1"] }
async-trait = "0.1"
futures = "0.3"
serde_json = "1"